# sdigdata

./: .coverage  .env.dev  .env.example  .env.prod  .gitignore  AI_ML_FOUNDATIONS.md  API_ENDPOINTS_SUMMARY.md  API_NOTES.md  ASYNC_MIGRATION_FIX_GUIDE.md  AUTH_IMPLEMENTATION.md  BUILD_FIXES.md  CORE_IMPROVEMENTS.md  CRITICAL_ISSUES.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCS_INDEX.md  Dockerfile  ENVIRONMENT_SETUP.md  FRONTEND_INTEGRATION_GUIDE.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT.md  MIGRATION_SUMMARY.md  POSTMAN_GUIDE.md  PROJECT_SUMMARY.md  PROMPT_FOR_FRONTEND_CLAUDE.md  QUICKSTART.md  README.md  SCALABILITY_IMPROVEMENTS.md  SETUP_SUMMARY.md  alembic.ini  bootstrap_admin.py  check_db.py  claude.md  cors_troubleshooting.md  docker-compose.yml  ensure_admin_permissions.py  frontend_permission_guide.md  init_db_extensions.sql  (+17 more)
alembic/: env.py
alembic/versions/: 1b4e9bf7b275_add_notifications_table.py  239b7d1516aa_add_missing_columns.py  2e9d8ffbcded_add_rbac_tables.py  3a22df3f24b5_add_form_lifecycle_management.py  3a7bdda9c3ea_add_response_quality_table.py  510c81575b4a_add_description_to_forms.py  51f0aa752a20_initial_schema.py  68df989a6c19_add_notification_preference_columns.py  8c041eef0d9a_add_rbac_security_enhancements.py  9bdf65372be3_add_translation_system.py  a1b2c3d4e5f6_add_candidate_profiles.py  a384a4b92753_add_performance_indexes.py  b0eb98057eb7_add_password_reset_tokens_table.py  b7ab79e8e908_admin_requirements.py  b843f7a58fb4_add_soft_delete_columns.py  c0114710n5y5_add_collation_system.py  dc375e053374_fix_critical_schema_issues.py  e7cb0933ef41_add_missing_responses_columns.py  e84dc12cb616_add_form_builder_enhancements.py  f1e2c3d4a5b6_add_elections_system.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: analytics.py  api_keys.py  audit.py  auth.py  candidate_profiles.py  collation.py  conditional_logic.py  election_analytics.py  elections.py  files.py  form_lifecycle.py  form_locking.py  form_templates.py  form_validation.py  form_versioning.py  forms.py  geographic.py  metrics.py  ml.py  notifications.py  organizations.py  permission_groups.py  political_parties.py  public.py  public_elections.py  question_import.py  rbac.py  responses.py  search.py  security_settings.py  sessions.py  users.py  voting.py
app/core/: config.py  database.py  logging_config.py  rate_limiting.py  responses.py  security.py  validation.py
app/services/: __init__.py  ai_question_refiner.py  analytics.py  api_keys.py  audit.py  candidate_profiles.py  collation.py  conditional_logic.py  election_analytics.py  elections.py  email.py  form_locking.py  form_templates.py  form_versioning.py  forms.py  geographic.py  ml_quality.py  notifications.py  organizations.py  permission_groups.py  permissions.py  political_parties.py  question_import.py  rbac.py  responses.py  result_sheets.py  security_settings.py  sessions.py  users.py  validation.py  voter_verification.py  voting.py
app/utils/: csv_export.py  spaces.py
docs/: DATABASE_MANAGEMENT.md  SCALABLE_VERIFICATION.md
migrations/: add_performance_indexes.sql
scripts/: check_bucket_policy.py  check_quality.py  configure_spaces_cors.py  db-migrate.sh  db-status.sh  deploy.sh  extract-queries.py  fix_permission_names.py  generate_api_docs.py  make_file_public.py  run_quality_checks.sh  seed_admin_permissions.py  seed_all.py  seed_form_templates.py  show-env.sh  update_docs.sh  use-dev.sh  use-local.sh  use-prod.sh  verify-db.sh
tests/: __init__.py  conftest.py  test_admin_operations.py  test_auth.py  test_database_schema.py  test_files.py  test_forms.py  test_organizations.py  test_permissions.py  test_responses.py  test_user_management.py  test_user_preferences.py
tests/integration/: __init__.py  test_analytics.py  test_auth.py  test_auth_service.py  test_cors_integration.py  test_file_upload.py  test_files.py  test_forms.py  test_forms_direct.py  test_forms_service.py  test_ml.py  test_ml_quality.py  test_notifications.py  test_organizations_direct.py  test_organizations_service.py  test_permissions.py  test_responses.py  test_responses_service.py  test_users.py
tests/security/: __init__.py  test_security.py
tests/unit/: test_collation_service.py  test_csv_export.py  test_elections_service.py  test_email_service.py  test_geographic_service.py  test_ml_quality_service.py  test_result_sheets_service.py  test_spaces.py  test_voting_service.py
