[project]
name = "sdigdata"
version = "1.0.0"
description = "SDIGdata Backend - FastAPI + PostgreSQL + DigitalOcean Spaces (MetroForm for Metropolitan Assemblies)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database - asyncpg (async PostgreSQL driver, NO ORM)
    "asyncpg>=0.30.0",
    # Database - psycopg2 for migrations
    "psycopg2-binary>=2.9.9",
    # Database migrations
    "alembic>=1.13.0",
    # Modern security - Argon2 is OWASP recommended for password hashing
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib --ignore=test_api_comprehensive.py"

